@@ -1,6 +1,6 @@
 
-R : Copyright 2006, The R Foundation for Statistical Computing
-Version 2.3.1 Patched (2006-07-13 r38676)
+R version 2.4.0 RC (2006-10-02 r39559)
+Copyright (C) 2006 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
@@ -157,6 +157,11 @@ C 3 6 9 12 100 3 6 9 12
 [1,] . 1 . . 2 1 . .  11 .  . 22 . .
 [2,] . . 2 . 1 1 . .  .  22 . 11 . 1
 [3,] 2 . 1 . . 1 . 22 .  11 . .  . 2
+Warning message:
+Ambiguous method selection for "+", target "dgTMatrix#dgCMatrix" (the first of the signatures shown will be used)
+    sparseMatrix#sparseMatrix
+    dMatrix#dMatrix
+ in: .findInheritedMethods(classes, fdef, mtable) 
 > 
 > ## print() / show() of  non-structural zeros:
 > (m <- Matrix(c(0, 0, 2:0), 3, 5))
@@ -189,14 +194,14 @@ C 3 6 9 12 100 3 6 9 12
 > m4 ## now show some non-structural zeros:
 6 x 10 sparse Matrix of class "dgCMatrix"
                         
-[1,] 1 0 . . 2 . 1 . . 2
-[2,] . 2 0 . 1 . . 2 . 1
+[1,] 1 . . . 2 . 1 . . 2
+[2,] . 2 . . 1 . . 2 . 1
 [3,] 2 . 3 . . 2 . 1 . .
-[4,] . 1 . 4 0 . 1 . . 2
+[4,] . 1 . 4 . . 1 . . 2
 [5,] . . 2 . 5 . . 2 . 1
 [6,] 2 . 1 . . 6 . 1 . .
 > 
 > 
 > cat('Time elapsed: ', proc.time(),'\n') # for ``statistical reasons''
-Time elapsed:  10.76 0.18 11.43 0 0 
+Time elapsed:  2.487 0.141 3.389 0 0 
 > 
